src/test/resources/samples/valid/two-pages-two-stories.bdoc
<?xml version="1.0" encoding="UTF-8"?>
<document xmlns="urn:bdoc:v0.1" id="doc-3" title="Two Pages" documentType="journal">
    <pages>
        <page id="page-1" index="1" width="595.0" height="842.0">
            <layers>
                <layer id="layer-text-1" name="Text" role="text" visible="true" zIndex="1"/>
            </layers>
            <objects>
                <textFrame id="text-1" layerRef="layer-text-1" storyRef="story-1">
                    <geometry x="60.0" y="120.0" width="470.0" height="220.0"/>
                </textFrame>
            </objects>
        </page>
        <page id="page-2" index="2" width="595.0" height="842.0">
            <layers>
                <layer id="layer-text-2" name="Text" role="text" visible="true" zIndex="1"/>
            </layers>
            <objects>
                <textFrame id="text-2" layerRef="layer-text-2" storyRef="story-2">
                    <geometry x="60.0" y="120.0" width="470.0" height="220.0"/>
                </textFrame>
            </objects>
        </page>
    </pages>
    <stories>
        <story id="story-1">
            <paragraph role="heading">Введение</paragraph>
            <paragraph role="body">Первая страница журнала.</paragraph>
        </story>
        <story id="story-2">
            <paragraph role="heading">Продолжение</paragraph>
            <paragraph role="body">Вторая страница журнала.</paragraph>
        </story>
    </stories>
</document>
