src/test/resources/samples/invalid/invalid-shape-type.bdoc
<?xml version="1.0" encoding="UTF-8"?>
<document xmlns="urn:bdoc:v0.1" id="doc-bad-3" title="Invalid Shape Type" documentType="book">
    <pages>
        <page id="page-1" index="1" width="595.0" height="842.0">
            <layers>
                <layer id="layer-decor" name="Decoration" role="decoration" visible="true" zIndex="1"/>
            </layers>
            <objects>
                <vectorShape id="shape-1" layerRef="layer-decor" type="circle">
                    <geometry x="40.0" y="40.0" width="100.0" height="100.0"/>
                </vectorShape>
            </objects>
        </page>
    </pages>
    <stories>
        <story id="story-1">
            <paragraph role="body">Форма circle пока не поддерживается схемой.</paragraph>
        </story>
    </stories>
</document>